--- a/src/app/lesson/[id]/quiz/page.module.css
+++ b/src/app/lesson/[id]/quiz/page.module.css
@@ -1,6 +1,6 @@
 .quizContainer {
     text-align: center;
-    padding: 20px;
+    padding-top: 80px;
 }
 
 .question {
