--- a/src/app/util/Flashcard.module.css
+++ b/src/app/util/Flashcard.module.css
@@ -1,25 +1,38 @@
 .flashcard {
     width: 200px;
     height: 120px;
+    perspective: 1000px;
+    cursor: pointer;
+}
+
+.cardInner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.cardInner.flipped {
+    transform: rotateY(180deg);
+}
+
+.cardFront, .cardBack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
     border: 2px solid #333;
     border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 20px;
-	background-color: var(--primary);
-    cursor: pointer;
-    transition: transform 0.4s ease-in-out;
-    perspective: 1000px; /* Creates the 3D effect */
-    transform-style: preserve-3d;
-}
-
-.flashcard.flipped {
-    transform: rotateY(360deg);
-	background-color: var(--primary);
-}
-
-.cardContent {
+    background-color: var(--primary);
     text-align: center;
     padding: 10px;
+}
+
+.cardBack {
+    transform: rotateY(180deg);
 }
